# pai

./: .pai-protected.json  INSTALL.md  README.md
.claude/: statusline-command.sh
.github/workflows/: build-docs.yml  deploy-docs.yml
Bundles/Official/: README.md
Packs/: README.md
Packs/pai-diataxis-documentation-skill/: INSTALL.md  README.md  UPDATE.md  VERIFY.md
Packs/pai-voice-system/: INSTALL.md
Packs/pai-voice-system/src/VoiceServer/: server.ts
Packs/pai-voice-system/src/voice/: manage.sh  server.ts
Releases/: README.md
Releases/v2.3/.claude/: install.ts
Releases/v2.3/.claude/VoiceServer/: server.ts
Releases/v2.4/: README.md
Releases/v2.5/: README.md
Releases/v2.5/.claude/: CLAUDE.md  INSTALL.md  INSTALL.ts  settings.json  statusline-command.sh  statusline-debug.sh
Releases/v2.5/.claude/VoiceServer/: README.md  audio_player.py  emotional_inference.py  install.sh  personality.py  pyproject.toml  server.py  start.sh  status.sh  stop.sh
Releases/v2.5/.claude/VoiceServer/voices/: index.json
Releases/v2.5/.claude/VoiceServer/voices/prompts/: kai.json
Releases/v2.5/.claude/agents/: Algorithm.md  Architect.md  Artist.md  ClaudeResearcher.md  Designer.md  Engineer.md  GeminiResearcher.md  QATester.md
Releases/v2.5/.claude/hooks/: AutoWorkCreation.hook.ts  ExplicitRatingCapture.hook.ts  FormatReminder.hook.ts  ImplicitSentimentCapture.hook.ts  (+8 more)
plans/: documentation-skill.md
website/: docusaurus.config.ts  package-lock.json  sidebars.ts
website/docs/developers/: index.md
website/docs/users/: index.md
website/src/pages/: index.tsx
(+158 files in other folders)
