[project]
name = "qwen3-voice-server"
version = "1.0.0"
description = "Local AI voice server using Qwen3-TTS with personality-based emotional expression"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.0",
    # Override qwen-tts dependencies with modern versions
    "librosa>=0.10.0",
    "numba>=0.58.0",
    "llvmlite>=0.41.0",
    "qwen-tts>=0.0.5",
]

[tool.uv]
dev-dependencies = []
# Override problematic transitive dependencies
override-dependencies = [
    "librosa>=0.10.0",
    "numba>=0.58.0",
    "llvmlite>=0.41.0",
]
